added throttling and removing favicon req

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Camera Stream(s)</title>
+        <link rel="icon" href="data:,">
     </head>
     <body>
         <h1>Camera Stream(s)</h1>
