restoring index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" href="data:,">
     </head>
     <body>
-        <h1>{{count}} Camera Stream(s) {{time}}</h1>
+        <h1>Camera Stream(s)</h1>
         <ul>
             {% for camera in camera_list %}
                 <li style="margin-bottom: 10px;"><a href={{camera}}-color-image_raw-compressed>{{camera}}</a></li>
